# DuckDB-Python

./: README.md  pyproject.toml
.github/workflows/: python.yml
notebooks/: main.ipynb
